--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane alignment="CENTER" hgap="10" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="400.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="CENTER" hgap="10" nodeOrientation="LEFT_TO_RIGHT" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <rowConstraints>
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="300.0" />
    </rowConstraints>
    <columnConstraints>
-      <ColumnConstraints maxWidth="95.0" minWidth="10.0" prefWidth="67.0" />
-      <ColumnConstraints maxWidth="148.0" minWidth="10.0" prefWidth="133.0" />
+      <ColumnConstraints maxWidth="95.0" minWidth="10.0" prefWidth="120.0" />
+      <ColumnConstraints maxWidth="148.0" minWidth="10.0" prefWidth="200.0" />
    </columnConstraints>
    <children>
       <Label text="Name">
@@ -26,15 +27,18 @@
             <Font size="14.0" />
          </font></Label>
       <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Button fx:id="addBtn" mnemonicParsing="false" onAction="#addUser" prefHeight="25.0" prefWidth="210.0" text="Dodaj" GridPane.columnSpan="2" GridPane.rowIndex="2">
+      <Button fx:id="addBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addUser" prefHeight="25.0" prefWidth="200.0" text="Dodaj" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <TableView fx:id="usersView" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="3">
+      <TableView fx:id="usersView" prefHeight="91.0" prefWidth="210.0" GridPane.columnSpan="2" GridPane.rowIndex="3">
         <columns>
-          <TableColumn fx:id="columnName" minWidth="0.0" prefWidth="0.0" text="Name" />
-          <TableColumn fx:id="columnEmail" prefWidth="107.0" text="Email" />
+          <TableColumn fx:id="columnName" minWidth="0.0" prefWidth="120.0" text="Name" />
+          <TableColumn fx:id="columnEmail" prefWidth="119.0" text="Email" />
         </columns>
       </TableView>
    </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </GridPane>
